--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     ],
     "rules": {
         "no-use-before-define": 0,
-        "import/no-unresolved": 0
+        "import/no-unresolved": 0,
+        "react/prop-types": ["error", { "ignore": ["navigation"] }]
     }
 }
